# sesame-robot

./: .gitignore  README.md  platformio.ini
docs/build-guide/: README.md
firmware/: README.md  camera-stream.h  captive-portal.h  movement-sequences.h  sesame-firmware-main.ino
firmware/hal/: README.md  board_esp32cam.h  board_esp32s3cam.h  hal.h
firmware/sesame-firmware-ros/: sesame-firmware-ros.ino
hardware/cad/: sesame-pcbSketch.dxf
hardware/cad/stl/: carriers.3mf  esp_carrier.stl  main_carrier.stl  pca9685.stl
hardware/pcb/pca9685_and_camera/: cal.ipynb  esp32_camera.kicad_sch  fp-lib-table  servo_group.kicad_sch  sesame-robot-pcb.kicad_pcb  sesame-robot-pcb.kicad_pro  sesame-robot-pcb.kicad_sch  step_up_4.2v_6v.kicad_sch  sym-lib-table
hardware/pcb/pca9685_and_camera/libs/ul_PTPS61288RQQR/KiCADv6/: 2026-04-06_16-42-18.kicad_sym
hardware/pcb/pca9685_and_camera/libs/ul_TPS61379QWRTERQ1/KiCADv6/: 2026-04-06_15-28-42.bak  2026-04-06_15-28-42.kicad_sym
hardware/pcb/pca9685_and_camera/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
software/ros2-positioning/: README.md
software/ros2-positioning/config/: camera_calibration.yaml  marker_map.yaml
software/ros2-positioning/launch/: sesame_positioning.launch.py
software/ros2-positioning/scripts/: calibrate_camera.py
software/ros2-positioning/sesame_aruco/: package.xml  setup.py
software/ros2-positioning/sesame_aruco/sesame_aruco/: __init__.py  aruco_node.py  navigation_node.py
software/ros2-positioning/setup/: install_agent.sh
(+5 files in other folders)
